# tauri-plugin-rust-network-runtime

./: Cargo.toml  README.md  build.rs  package.json  rollup.config.mjs  tsconfig.build.json  tsconfig.rollup.json
dist-js/: index.cjs  index.js  runtime.d.ts  websocket.d.ts
dist-js/guest-js/: event-source.d.ts  index.d.ts  xhr.d.ts
examples/tauri-app/: README.md  package.json
examples/tauri-app/src/: App.svelte  main.js  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: abort_http_request.toml  event_source_close.toml  event_source_connect.toml  eventsource_close.toml  eventsource_connect.toml  http_request.toml  send_beacon.toml  websocket_close.toml  websocket_connect.toml  websocket_send.toml
permissions/schemas/: schema.json
src/: client.rs  commands.rs  cookies.rs  desktop.rs  error.rs  http.rs  lib.rs  mobile.rs  models.rs  sse.rs  websocket.rs
