[package]
name = "tauri-plugin-rust-network-runtime"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-rust-network-runtime"

[dependencies]
tauri = { version = "2.10.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
base64 = "0.22"
bytes = "1"
cookie = "0.18"
cookie_store = { version = "0.22.1", features = ["serde", "serde_json"] }
futures-util = "0.3"
http = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "cookies", "http2", "json", "multipart", "rustls", "stream"] }
reqwest_cookie_store = "0.10.0"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = "0.7.18"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }
